Added battle system

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
             <canvas id="game-canvas" width="700" height="500"></canvas>
         </div>
 
+        <!-- Battle Controls -->
+        <div id="battle-controls" class="battle-controls-container"></div>
+
         <!-- Stats Section -->
         <div class="stats-container">
             <div class="stats-grid">
